--- a/PostgreSQLPortable/App/AppInfo/AppInfo.ini
+++ b/PostgreSQLPortable/App/AppInfo/AppInfo.ini
@@ -6,7 +6,7 @@ Version=3.5
 Name=PostgreSQL Portable
 AppID=PostgreSQLPortable
 Publisher=PostgreSQL
-Homepage=https://gareth.flowers/postgresql-portable
+Homepage=https://github.com/rsubr/postgresql-portable
 Category=Development
 Description=PostgreSQL Database
 Language=Multilingual
@@ -18,8 +18,8 @@ Freeware=true
 CommercialUse=true
 
 [Version]
-PackageVersion=10.4.1.0
-DisplayVersion=10.4.1
+PackageVersion=12.0
+DisplayVersion=12.0
 
 [Control]
 Icons=1
