--- a/PostgreSQLPortable/App/AppInfo/Installer.ini
+++ b/PostgreSQLPortable/App/AppInfo/Installer.ini
@@ -1,12 +1,12 @@
 [DownloadFiles]
-DownloadURL=https://get.enterprisedb.com/postgresql/postgresql-10.4-1-windows-binaries.zip
-DownloadName=PostgreSQL 10.4-1
-DownloadFilename=postgresql-10.4-1-windows-binaries.zip
-DownloadMD5=725709d72b27987d9969b95a5abecaa0
+DownloadURL=https://get.enterprisedb.com/postgresql/postgresql-12.0-1-windows-x64-binaries.zip
+DownloadName=PostgreSQL 12.0-1
+DownloadFilename=postgresql-12.0-1-windows-x64-binaries.zip
+DownloadMD5=a0e7d9f232e4f016d63d527ff43a82cb
 AdvancedExtract1To=App
 AdvancedExtract1Filter=PgSQL\bin\**
 AdvancedExtract2To=App
 AdvancedExtract2Filter=PgSQL\lib\**
 AdvancedExtract3To=App
 AdvancedExtract3Filter=PgSQL\share\**
-AdditionalInstallSize=83000
+AdditionalInstallSize=88000
